cluster/apps/znc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: znc
  labels:
    app: znc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.hut.sh/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.hut.sh/oauth2/start?rd=https://$host$uri"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - znc.hut.sh
      secretName: my-certs-znc
  rules:
    - host: znc.hut.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: znc
                port:
                  name: irc
